Missing from like commit

--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
             <div class="flex flex-col md:flex-row items-center">
                 <img src="https://via.placeholder.com/300" alt="Profile Picture" class="w-48 h-48 rounded-full mb-6 md:mb-0 md:mr-8" data-aos="fade-right" data-aos-duration="800">
                 <div data-aos="fade-left" data-aos-duration="800">
-                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I'm a software developer with a passion for building impactful solutions. My expertise includes [list skills, e.g., JavaScript, Python, cloud computing].</p>
-                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I specialize in creating [mention focus, e.g., web apps, APIs, or ML models] and thrive on solving complex problems. I also enjoy photography as a creative outlet.</p>
+                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I'm a software engineer with a passion for building impactful solutions. My expertise includes Python, C programming, front-end website development, PCB construction, and internal software solutions.</p>
+                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I specialize in creating graphical user interfaces, website design, and hardware communication whilst thriving to solve complex problems. I also enjoy photography as a creative outlet.</p>
                     <a href="assets\about_me\ryan_vorachak_resume_edit13.pdf" class="btn inline-block bg-[#F4A9BC] text-white font-semibold py-3 px-8 rounded-full hover:bg-[#D989A0] transition" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="800">Download Resume</a>
                 </div>
             </div>
