--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
     </section>
 
     <!-- Projects Section -->
-    <!-- Projects Section -->
     <section id="projects" class="py-20 bg-white dark:bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-4xl font-bold text-center mb-12 text-gray-900 dark:text-gray-100" data-aos="fade-up" data-aos-duration="800">My Projects</h2>
@@ -165,19 +164,19 @@
                         <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Retro Pedals (TBD)</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">A passion project of mine to recreate old guitar pedal sounds. Modern guitar pedal circuits somehow sound noticably worst than old effects. This is due to evolved construction of circuit components such as capacitors and resistors, but a huge part is also how these circuits are wired.</p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">TBD</a>
-                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>
+                            <!--<a href="#" class="text-[#00B5C8] hover:underline font-medium">TBD</a>-->
+                            <!--<a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="project-card bg-gray-50 dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                     <img src="assets\project_widgets\Multieffects_Archetype_Widget_Bkg.jpg" alt="Project 2" class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Multieffects Pedal</h3>
+                        <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Multieffects Pedal (TBD)</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">A software driven digital effects pedal which utilizes Python and a Raspberry Pi to create an audio interface suite, right by your foot. Since there is only so much you can do on a tiny touchscreen, the pedal software will also have a desktop GUI accessible via bluetooth.</p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">TBD</a>
-                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>
+                            <!--<a href="#" class="text-[#00B5C8] hover:underline font-medium">TBD</a>-->
+                            <!--<a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>-->
                         </div>
                     </div>
                 </div>
@@ -186,6 +185,39 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Deadbeat Simulator</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">Game development class project, where my team and I were task to create a game of our liking in Godot. Deadbeat Simulator is an overtly ambitious project which takes after the likes of the original Grand Theft Auto video games. This was a showcase of our skills and learning in Godot.</p>
+                        <div class="flex space-x-4">
+                            <a href="https://godotengine.org/download/windows/" class="text-[#00B5C8] hover:underline font-medium">Download Godot</a>
+                            <a href="https://github.com/rvorachak/Deadbeat-Simulator" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card bg-gray-50 dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
+                    <img src="https://via.placeholder.com/400x300" alt="Project 3" class="w-full h-48 object-cover" loading="lazy">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Senior Project: Theremin w/ Digital Effects</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Worked in tandem with an Electrical Engineer to produce a Theremin. The main goal was to design a theremin which would have modular effects using an ADC+DAC audio interface attached to a Raspberry Pi. Digital signal processing was done using equations to emulate different signal filters (such as LPF, HPF, etc) used in conjunction with Python libraries to perform this DSP.</p>
+                        <div class="flex space-x-4">
+                            <a href="https://media-gallery.unh.edu/media_file_download/2530/" class="text-[#00B5C8] hover:underline font-medium">Poster</a>
+                            <a href="https://media-gallery.unh.edu/media_submission/1851/?added__year=2025&conference=2&event=4&department=43" class="text-[#00B5C8] hover:underline font-medium">URC Abstract</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card bg-gray-50 dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
+                    <img src="https://via.placeholder.com/400x300" alt="Project 3" class="w-full h-48 object-cover" loading="lazy">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Placeholder</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Hamburger.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">Download Godot</a>
+                            <a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card bg-gray-50 dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
+                    <img src="https://via.placeholder.com/400x300" alt="Project 3" class="w-full h-48 object-cover" loading="lazy">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Placeholder</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Hamburger.</p>
                         <div class="flex space-x-4">
                             <a href="#" class="text-[#00B5C8] hover:underline font-medium">Download Godot</a>
                             <a href="#" class="text-[#00B5C8] hover:underline font-medium">GitHub</a>
@@ -204,7 +236,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="photo-card bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden mx-2">
-                            <img src="https://via.placeholder.com/400x300" alt="Portraits" class="w-full h-64 object-cover" loading="lazy">
+                            <img src="assets\photo_widgets\port_widget_bkg.jpg" alt="Portraits" class="w-full h-64 object-cover" loading="lazy">
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Portraits</h3>
                                 <p class="text-gray-600 dark:text-gray-300 mb-4">Capturing the essence of individuals through expressive portrait photography.</p>
@@ -214,7 +246,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="photo-card bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden mx-2">
-                            <img src="https://via.placeholder.com/400x300" alt="Landscape" class="w-full h-64 object-cover" loading="lazy">
+                            <img src="assets\photo_widgets\ldsc_widget_bkg.jpeg" alt="Landscape" class="w-full h-64 object-cover" loading="lazy">
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Landscape</h3>
                                 <p class="text-gray-600 dark:text-gray-300 mb-4">Stunning vistas and natural beauty captured in breathtaking landscapes.</p>
@@ -224,7 +256,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="photo-card bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden mx-2">
-                            <img src="https://via.placeholder.com/400x300" alt="Automotive" class="w-full h-64 object-cover" loading="lazy">
+                            <img src="assets\photo_widgets\auto_widget_bkg.jpg" alt="Automotive" class="w-full h-64 object-cover" loading="lazy">
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-gray-100">Automotive</h3>
                                 <p class="text-gray-600 dark:text-gray-300 mb-4">Dynamic shots of vehicles, showcasing design and performance.</p>
@@ -297,9 +329,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-4xl font-bold text-center mb-12 text-gray-900 dark:text-gray-100" data-aos="fade-up" data-aos-duration="800">About Me</h2>
             <div class="flex flex-col md:flex-row items-center">
-                <img src="https://via.placeholder.com/300" alt="Profile Picture" class="w-48 h-48 rounded-full mb-6 md:mb-0 md:mr-8" data-aos="fade-right" data-aos-duration="800">
+                <img src="assets\about_me\me.jpg" alt="Profile Picture" class="w-48 h-48 rounded-full mb-6 md:mb-0 md:mr-8" data-aos="fade-right" data-aos-duration="800">
                 <div data-aos="fade-left" data-aos-duration="800">
-                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I'm a software engineer with a passion for building impactful solutions. My expertise includes Python, C programming, front-end website development, PCB construction, and internal software solutions.</p>
+                    <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I'm a software engineer with a passion for building impactful solutions. My expertise includes Python, C programming, front-end website development, PCB construction, and internal test software.</p>
                     <p class="text-lg mb-4 text-gray-700 dark:text-gray-300">I specialize in creating graphical user interfaces, website design, and hardware communication whilst thriving to solve complex problems. I also enjoy photography as a creative outlet.</p>
                     <a href="assets\about_me\ryan_vorachak_resume_edit13.pdf" class="btn inline-block bg-[#F4A9BC] text-white font-semibold py-3 px-8 rounded-full hover:bg-[#D989A0] transition" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="800">Download Resume</a>
                 </div>
